solved issues on ios/mac safari: form elements overlapping one another or collapsing their height on keyboard; added labels to the phone country code & phone number to work on different rows;

--- a/package/src/common/Input/InputButton/InputButton.module.css
+++ b/package/src/common/Input/InputButton/InputButton.module.css
@@ -22,7 +22,6 @@
     letter-spacing: 0.01em;
     color: var(--text-dark-color);
     margin-bottom: 12px;
-    white-space: nowrap;
 }
 
 .input-wrapper {
