--- a/package/src/steps/FormView/styles.module.css
+++ b/package/src/steps/FormView/styles.module.css
@@ -1,5 +1,4 @@
 .terms {
-/*     margin-left: calc( var(--icon-width) / 2); */
     font-size: 0.75rem;
     padding-top: var(--form-field-space);
 }
@@ -11,13 +10,12 @@
 /***********************************/
 
 .resend {
-    display: flex;
-    flex-direction: row;
-    align-self: flex-end;
     font-size: 0.75rem;
     margin-top: 0.56rem;
     text-transform: uppercase;
-    color: #808080;
+    color: var(--text-light-color);
+    text-align: right;
+    width: 100%;
 }
 
 .resend:hover {
